--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ function scrollToCurrentIndex() {
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
     <div class="column has-text-centered">
-    <h1 class="title is-1 publication-title"> <b>AFL-Net:</b>  </h1>
-    <h3 class="title is-3 publication-title"> INTEGRATING AUDIO, FACIAL, AND LIP MODALITIES WITH </h3>
-    <h2 class="title is-3 publication-title"> CROSS-ATTENTION FOR ROBUST SPEAKER DIARIZATION IN THE WILD </h2>
+    <h1 class="title is-1 publication-title"> <b>AFL-Net</b>  </h1>
+    <p> Video Demo for "AFL-Net: Integrating Audio, Facial, and Lip Modalities with Cross-Attention for Robust Speaker Diarization in the Wild"</p>
+
     </div>
     <br>
     <div class="is-size-5">
