--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ function scrollToCurrentIndex() {
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
     <div class="column has-text-centered">
-    <h1 class="title is-1 publication-title"> <b>AFL-Net</b>  </h1>
+    <h1 class="title is-1 publication-title"> <b>AFL-Net: Integrating Audio, Facial, and Lip Modalities with Cross-Attention for Robust Speaker Diarization in the Wild</b>  </h1>
     <p> Audio samples for "AFL-Net: Integrating Audio, Facial, and Lip Modalities with Cross-Attention for Robust Speaker Diarization in the Wild"</p>
 
     </div>
